--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
         <span id="tsText"></span>
     </div>
     <center>
-    <a href="tool/uuid.html">
+    <a href="uuid.html">
       <button class="button button1">UUID生成器</button>
     </a>
     <hr/>
-    <a href="tool/linux.html">
+    <a href="linux.html">
       <button class="button button1">Linux命令查询</button>
     </a>
     <hr/>
-    <a href="tool/qrcode.html">
+    <a href="qrcode.html">
       <button class="button button1">文字链接转二维码</button>
     </a>
     </center>
