--- a/qqimg.html
+++ b/qqimg.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
     <script>
     function handle(){
-        document.getElementByID("qqimg").src="https://q.qlogo.cn/g?b=qq&nk="+text+"&s=640";
+        document.getElementByID("qqimg").src="https://q.qlogo.cn/g?b=qq&nk=448610381&s=640";
     }
     </script>
 </head>
@@ -23,10 +23,11 @@
     </div>
     <center>
         <img src="https://q.qlogo.cn/g?b=qq&nk=1634297622&s=640" style="width:100px; height:100px; margin-top:15px;">
-        <br/>
+        <br />
+        <br />
         <input id="text" type="text" style="width:80%" >
-        <br/>
-        <hr/>
+        <br />
+        <hr />
     </center>
     <button type="button" class="btn btn-primary btn-block mt-2 " onclick="handle()"> 获取 </button>
 </body>
