--- a/qqimg.html
+++ b/qqimg.html
@@ -27,8 +27,6 @@
         <br/>
         <hr/>
     </center>
-    <button type="button" class="btn btn-primary btn-block mt-2 ">
-        查询
-    </button>
+    <button class="button radius bordered shadow success small " v-on:click="getIcon">获取头像</button>
 </body>
 </html>
