--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>在线工具;NuyoaH-L;Tools</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <link rel="shortcut icon" href="https://blog.nuyoah-l.ml/asserts/img/icon.png">
+    <script src='https://cdn.jsdelivr.net/npm/busuanzi@2.3.0' async='async'></script>
+    <script async="async" src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/js/all.min.js"></script>
     <script type="text/javascript" src="//cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="//static.runoob.com/assets/qrcode/qrcode.min.js"></script>
     <meta charset="utf-8">
@@ -45,7 +48,13 @@
         <h3><a href="javascript:history.back();" class="text-dark text-decoration-none"><i class="fa fa-arrow-left"></i></a>&nbsp;在线工具合集</h3>
         <hr/>
     <div class="alert alert-info" role="alert">
-        <span id="tsText"></span>
+        <center>
+          <div>
+            <img src="https://image.flaticon.com/icons/png/128/159/159604.png" width="15" height="15" align="absmiddle"><span id="busuanzi_value_page_pv"><i class="fas fa-spinner fa-pulse"></i></span>次
+            <img src="https://image.flaticon.com/icons/png/128/731/731993.png" width="15" height="15" align="absmiddle"><span id="busuanzi_value_site_pv"><i class="fas fa-spinner fa-pulse"></i></span>枚
+            <img src="https://image.flaticon.com/icons/png/128/32/32441.png" width="15" height="15" align="absmiddle"><span id="busuanzi_value_site_uv"><i class="fas fa-spinner fa-pulse"></i></span>人
+          </div>
+        </center>
     </div>
     <center>
     <a href="uuid.html">
