--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>在线工具;NuyoaH-L;Tools</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <link rel="shortcut icon" href="https://blog.nuyoah-l.ml/asserts/img/icon.png">
+    <link rel="shortcut icon" href="favicon.ico">
     <script src='https://cdn.jsdelivr.net/npm/busuanzi@2.3.0' async='async'></script>
     <script async="async" src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/js/all.min.js"></script>
     <script type="text/javascript" src="//cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
