--- a/today.html
+++ b/today.html
@@ -1,34 +1,3 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-  <head>
-    <meta charset="utf-8">
-    <title>历史上的今天-历史上的今天接口api</title>
-	<meta name="description" content="历史上的今天">
-	<meta name="keywords" content="历史上的今天">
-	<script data-ad-client="ca-pub-7995482604485635" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  </head>
-	<body>
-	<section style="text-align:center;clear:both;margin:auto;padding: 10px;width:100%;max-width: 960PX;box-sizing: border-box;box-shadow: rgb(170, 170, 170) 0px 0px 5px inset;border-radius: 0.6em;border-color: rgb(192, 200, 209);border-width: 1px;border-style: solid;background-color: rgb(250, 250, 239);overflow-wrap: break-word !important;">
-	<h1>历史上的今天</h1>
-	</section>
-	<section style="clear:both;margin:auto;margin-top:10px;padding: 10px;width:100%;max-width: 960PX;box-sizing: border-box;box-shadow: rgb(170, 170, 170) 0px 0px 5px inset;border-radius: 0.6em;border-color: rgb(192, 200, 209);border-width: 1px;border-style: solid;background-color: rgb(250, 250, 239);overflow-wrap: break-word !important;">
-	历史上的今天  01月21日
-        <br>1793 法国国王路易十六被处决
-        <br>1870 俄国杰出的哲学家、作家赫尔岑逝世
-        <br>1885 日本陆军大将板垣征四郎出生
-        <br>1887 格式塔心理学的创始人霍斯特·克勒出生
-        <br>1892 英国著名天文学家约翰·柯西·亚当斯逝世
-        <br>1905 Dior品牌创始人克里斯汀·迪奥出生
-        <br>1911 美国首次提出癌肿瘤是病毒所致
-        <br>1924 苏联政治家列宁逝世
-        <br>1941 西班牙男高音歌唱家普拉西多·多明戈出生
-        <br>1950 英国作家乔治·奥威尔逝世
-        <br>1951 阿尔卑斯山发生巨大雪崩
-        <br>1953 微软创始人之一保罗·艾伦出生
-        <br>1954 核动力潜艇 “鹦鹉螺”号下水
-        <br>1960 人类第一次将动物送入太空
-        <br>2006 香港政治人物郭伯伟逝世
-        <br>
-</section>
-</body>
-</html>
+<iframe src="https://www.ipip5.com/today/" width="200" height="500"> 
+该网站使用了框架技术，但是您的浏览器不支持框架，请升级您的浏览器以便正常访问。 
+</iframe> 
