--- a/today.html
+++ b/today.html
@@ -1,3 +1,3 @@
-<iframe src="https://www.ipip5.com/today.api" width="100%" height="100%"> 
+<iframe src="https://www.ipip5.com/today/api.php" width="100%" height="100%"> 
 该网站使用了框架技术，但是您的浏览器不支持框架，请升级您的浏览器以便正常访问。 
 </iframe> 
