--- a/today.html
+++ b/today.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<head>
+    <title>历史上的今天</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <script type="text/javascript" src="//cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//static.runoob.com/assets/qrcode/qrcode.min.js"></script>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css">
+</head>
+
+<body>
 <iframe src="https://www.ipip5.com/today/api.php" width="100%" height="100%"> 
 该网站使用了框架技术，但是您的浏览器不支持框架，请升级您的浏览器以便正常访问。 
 </iframe> 
+</body>
+</html>
