--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
     </div>
     <center>
     <a href="uuid.html">
-      <button class="button button1">UUID生成器</button>
+      <button class="button button1" width="90%">UUID生成器</button>
     </a>
     <hr/>
     <a href="linux.html">
-      <button class="button button1">Linux命令查询</button>
+      <button class="button button1" width="90%">Linux命令查询</button>
     </a>
     <hr/>
     <a href="qrcode.html">
-      <button class="button button1">文字链接转二维码</button>
+      <button class="button button1" width="90%">文字链接转二维码</button>
     </a>
     </center>
   </body>
