--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         transition-duration: 0.4s;
     }
     .button1 {
-        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 100% 0 rgba(0,0,0,0.19);
     }
     </style>
     <script>
@@ -58,19 +58,19 @@
     </div>
     <center>
     <a href="source.html">
-      <button class="button button1" width="90%">网页源代码</button>
+      <button class="button button1">网页源代码</button>
     </a>
     <hr/>
     <a href="uuid.html">
-      <button class="button button1" width="90%">UUID生成器</button>
+      <button class="button button1">UUID生成器</button>
     </a>
     <hr/>
     <a href="linux.html">
-      <button class="button button1" width="90%">Linux命令查询</button>
+      <button class="button button1">Linux命令查询</button>
     </a>
     <hr/>
     <a href="qrcode.html">
-      <button class="button button1" width="90%">文字链接转二维码</button>
+      <button class="button button1">文字链接转二维码</button>
     </a>
     </center>
   </body>
