--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         transition-duration: 0.4s;
     }
     .button1 {
-        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 100% 0 rgba(0,0,0,0.19);
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     }
     </style>
     <script>
