--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <link rel="shortcut icon" href="favicon.ico">
-    <script src='https://cdn.jsdelivr.net/npm/busuanzi@2.3.0' async='async'></script>
-    <script async="async" src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/js/all.min.js"></script>
-    <script type="text/javascript" src="//cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src='https://fastly.jsdelivr.net/npm/busuanzi@2.3.0' async='async'></script>
+    <script async="async" src="https://fastly.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/js/all.min.js"></script>
+    <script type="text/javascript" src="//fastly.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="//static.runoob.com/assets/qrcode/qrcode.min.js"></script>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
