--- a/qrcode.html
+++ b/qrcode.html
@@ -21,7 +21,7 @@
     <center>
         <div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
         <br/>
-        <input id="text" type="text"  value="https://www.nuyoah-l.ml" style="width:80%" >
+        <input id="text" type="text"  value="https://www.nuyoah-l.ga" style="width:80%" >
         <br/>
         <hr/>
     </center>
